docs/tests/parser/functions/invalid/FuncParamMissingType.b
fn int foo(a, b) {
}
